fixed text alignment

--- a/app/assets/stylesheets/story_show.css
+++ b/app/assets/stylesheets/story_show.css
@@ -21,6 +21,7 @@ pre {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
 }
 
 .picture-container {
